Fixed text flickering on list-item-hover

--- a/src/pages/ListPage/style.scss
+++ b/src/pages/ListPage/style.scss
@@ -53,7 +53,7 @@
       }
 
       &:hover {
-        transform: scale(.95);
+        width: 95%;
         box-shadow: rgba(0, 0, 0, 0.8) 0 40px 58px -16px, rgba(0, 0, 0, 0.72) 0 30px 22px -10px;
 
         img {
